<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_folders">Folders</string>
    <string name="menu_playlist">Playlists</string>
    <string name="menu_songs">Songs</string>
    <string name="menu_artists">Artists</string>
    <string name="menu_albums">Albums</string>


    <string name="play">Play</string>
    <string name="enqueue">Enqueue</string>
    <string name="play_next">Play next</string>
    <string name="shuffle">Shuffle</string>
    <string name="lyrics">Lyrics</string>
    <string name="edit_tags">Edit tags</string>
    <string name="use_as_ringtone">Use as ringtone</string>
    <string name="delete">Delete</string>
    <string name="add_to_playlist">Add to playlist</string>

</resources>
