<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/song_play"
        android:title="@string/play"
        app:showAsAction="never"/>

    <item android:id="@+id/song_enqueue"
        android:title="@string/enqueue"
        app:showAsAction="never"/>

    <item android:id="@+id/song_play_next"
        android:title="@string/play_next"
        app:showAsAction="never"/>

    <item android:id="@+id/song_shuffle"
        android:title="@string/shuffle"
        app:showAsAction="never"/>

    <item android:id="@+id/song_add_to_playlist"
        android:title="@string/add_to_playlist"
        app:showAsAction="never"/>

    <item android:id="@+id/song_view_lyrics"
        android:title="@string/lyrics"
        app:showAsAction="never"/>

    <item android:id="@+id/song_edit_tags"
        android:title="@string/edit_tags"
        app:showAsAction="never"/>

    <item android:id="@+id/song_use_as_ringtone"
        android:title="@string/use_as_ringtone"
        app:showAsAction="never"/>

    <item android:id="@+id/song_delete"
        android:title="@string/delete"
        app:showAsAction="never"/>

</menu>